src/objects/Department_Taxonomy__c.object
<CustomObject>
    <description>This object contains all the current department taxonomy information</description>
    <fields>
        <fullName>All__c</fullName>
        <description>All (Highest Level)</description>
        <label>User Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country (Level 5)</description>
        <label>User Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAS__c</fullName>
        <description>DAS (Level 2)</description>
        <label>User DAS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_0__c</fullName>
        <label>User Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Office (Level 6)</description>
        <label>OLD Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Office_Name__c</fullName>
        <description>Old office name mapped to new office</description>
        <label>User Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_1__c</fullName>
        <description>Region 1 (Level 4)</description>
        <label>User Sub-region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <description>Region 2 (Level 3)</description>
        <label>User Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Department Taxonomy</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Old_Office_Name__c</columns>
        <columns>Office__c</columns>
        <columns>Region_2__c</columns>
        <columns>Region_1__c</columns>
        <columns>All__c</columns>
        <columns>Country__c</columns>
        <columns>DAS__c</columns>
        <columns>Level_0__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>office_searching_2</fullName>
        <columns>NAME</columns>
        <columns>Old_Office_Name__c</columns>
        <columns>Office__c</columns>
        <columns>Region_2__c</columns>
        <columns>All__c</columns>
        <columns>Country__c</columns>
        <columns>DAS__c</columns>
        <columns>Level_0__c</columns>
        <columns>Region_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Old_Office_Name__c</field>
            <operation>contains</operation>
            <value>GM-CS</value>
        </filters>
        <label>office searching 2</label>
    </listViews>
    <nameField>
        <displayFormat>DT{00000}</displayFormat>
        <label>Department Taxonomy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Taxonomy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>